--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>Mappedin2</title>
+    <title>Mappedin Web SDK v6 Getting Started</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
     <style>
         * {
             margin: 0;
@@ -26,9 +26,8 @@
 </head>
 
 <body>
-    <H1>Hello1</H1>
     <div id="mappedin-map"></div>
-    <script src="src/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
 </body>
 
 </html>
