--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 
 <head>
-    <title>Mappedin Web SDK v6 Getting Started</title>
+    <title>Mapped2ed</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
     <style>
         * {
             margin: 0;
@@ -17,7 +16,7 @@
             height: 100%;
         }
 
-        #mappedin-map {
+        #app {
             height: 100%;
             width: 100%;
             position: relative;
@@ -26,8 +25,9 @@
 </head>
 
 <body>
-    <div id="mappedin-map"></div>
-    <script type="module" src="src/main.ts"></script>
+    <div id="app"></div>
+
+    <script src="src/index.ts"></script>
 </body>
 
 </html>
